2006-11-04  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/helpers/application_helper.rb (ApplicationHelper::don_delete_all): New method. It deletes all files and sub-directories.
	(ApplicationHelper::don_delete_cache_all): New method. It called by login/delete_cache.

	* donrails/app/controllers/login_controller.rb (LoginController::delete_cache): New method: It deletes all files and directories for cache pages.

2006-11-03  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/models/article_sweeper.rb (ArticleSweeper::ep_atom): Fix to erase /atom/feed.xml.

	* donrails/app/views/layouts/login.rhtml: Fix link to manage_don_ping.

	* donrails/app/models/comment_mailer.rb (CommentMailer::notify): Fix url from notes to archives. (issue #28)

	* donrails/app/views/atom/post.rxml: likewise.

	* donrails/app/views/atom/categories.rxml: likewise.

	* donrails/app/views/atom/image_post.rxml: likewise.

	* donrails/app/views/atom/index.rxml: likewise.

	* donrails/app/views/atom/feed.rxml: Fix for comply rfc4287 and http://xmlns.com/wordnet/1.6/ for category.

2006-11-03  Akira TAGOH  <at@gclab.org>

	* donrails/tool/td2db.rb: deal with comments and trackbacks
	separately. (issue #20) Patch from akira yamada.

	* donrails/tool/td2db.rb (TDiary::Dummy::mobile_agent?): new method to
	not generate HTMLs for mobile. (issue #19) Patch from akira yamada.
	(TDiary::Dummy::user_agent): likewise.

	* donrails/tool/td2db.rb: fix a debugging message to not screwed up.
	(issue #18) Patch from akira yamada.

	* donrails/tool/td2db.rb: fix possible plugin errors. (issue #17)
	Patch from akira yamada.

2006-11-02  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/models/article_sweeper.rb (ArticleSweeper::ep_notes): Add logging when expire '/public/index.html'.

	* donrails/app/controllers/notes_controller.rb (NotesController::noteslist): When neithor article found nor don_env found, redirect_to manage_don_env. (issue #26)
