@@ -1,7 +1,7 @@
 #!/usr/bin/make
 
 NAME = donrails
-VERSION = 1.4.0-alpha3
+VERSION = 1.4.0-alpha4
 TESTDIR = '/tmp/.donrails'
 
 all: link
