@@ -1,6 +1,9 @@
 <% @heading = "グローバル設定" %>
 <h1>don_env management</h1>
-
+<div class="notice">
+  <%=h @flash[:note] %>
+  <%=h @flash[:note2] %>
+</div>
 <hr>
 新規設定の追加
 <p>
