@@ -22,7 +22,7 @@
 <% end %>
 </select>
 <%= check_box "hideid", 'hidden' %>記事を隱す<br>
-著者名:<%= text_field_with_auto_complete :author, :name %><br>
+著者名:<%= text_field_with_auto_complete :author, :name, 'value' => @dgc.admin_user %><br>
 タイトル:<%= text_field "article", "title", "size" => 80 %><br>
 トラックバック先:<%= text_field "article", "tburl", "size" => 80 %><br>
 本文:<br><%= text_area "article", "body", "rows" => 40, "cols" => 80 %><br>
