@@ -116,7 +116,6 @@ else
   end
 end
 
-
 print "\n****** Setup donrails_env.rb **********\n"
 penv = ''
 envpath = topdir + "rails/config/environments/donrails_env.rb"
@@ -129,13 +128,7 @@ buf = Readline.readline("Do you want to keep? [y/n]", true)
 if buf == "y"
   print "Sure. I Keep #{envpath}\n"
 else
-  buf = Readline.readline("Are you use image file upload? [Y/n]", true)
-  if buf == "n"
-  else
-    penv += "IMAGE_DUMP_PATH = \"/public/images/dump/\"\n"
-  end
-
-  buf = Readline.readline("Input username for administration. YOU MUST input. >", true)
+  buf = Readline.readline("Input username for administration. If you do not input, I will generate for you.. >", true)
   if buf == ""
     d_username = open("/dev/random").read(2).unpack("H*").first
     penv += "ADMIN_USER = \"#{d_username}\"\n"
@@ -144,7 +137,7 @@ else
     penv += "ADMIN_USER = \"#{buf}\"\n"
     d_username = buf
   end
-  buf = Readline.readline("Input password for administration. YOU MUST input>", nil)
+  buf = Readline.readline("Input password for administration. If you do not input, I will generate for you.. >",nil)
   if buf == ""
     d_password = open("/dev/random").read(4).unpack("H*").first
     penv += "ADMIN_PASSWORD = \"#{d_password}\"\n"
@@ -153,42 +146,11 @@ else
     penv += "ADMIN_PASSWORD = \"#{buf}\"\n"
   end
 
-  buf = Readline.readline("Input RDF_TITLE (default: #{d_username}.blog.donrails) >", nil)
-  if buf == ""
-    penv += "RDF_TITLE = \"#{d_username}.blog.donrails\"\n"
-    rdf_title = "#{d_username}.blog.donrails"
-  else
-    penv += "RDF_TITLE = \"#{buf}\"\n"
-  end
-  buf = Readline.readline("Input RDF_DESCRIPTION (default: #{rdf_title} >", nil)
-  if buf == ""
-    penv += "RDF_DESCRIPTION = \"#{rdf_title}\"\n"
-  else
-    penv += "RDF_DESCRIPTION = \"#{buf}\"\n"
-  end
-  buf = Readline.readline("Input RDF_COPYRIGHT (default: (c) 2005 #{d_username} >", nil)
-  if buf == ""
-    penv += "RDF_COPYRIGHT = \"(c) 2005 #{d_username}\"\n"
-  else
-    penv += "RDF_COPYRIGHT = \"#{buf}\"\n"
-  end
-  buf = Readline.readline("Input RDF_MANAGINGEDITOR (default: #{d_username} >", nil)
-  if buf == ""
-    penv += "RDF_MANAGINGEDITOR = \"#{d_username}\"\n"
-  else
-    penv += "RDF_MANAGINGEDITOR = \"#{buf}\"\n"
-  end
-  buf = Readline.readline("Input RDF_WEBMASTER (default: #{d_username} >", nil)
-  if buf == ""
-    penv += "RDF_WEBMASTER = \"#{d_username}\"\n"
-  else
-    penv += "RDF_WEBMASTER = \"#{buf}\"\n"
-  end
-
   print "\v Please confirm NEW donrails_env.rb\n"
   puts penv
 
   buf = Readline.readline("Is this correct? Can I write on file? [N/y] >", true)
+
   if buf == "y"
     cf = open(envpath, "w")
     cf.write(penv)
@@ -196,12 +158,13 @@ else
   else
     print "no write. skip.\n"
   end
+
 end
 
-## Require_dependency "environments/#{RAILS_ENV}"
 envfile = topdir + "rails/config/environment.rb"
 envfiledata = open(envfile, "a")
 envfiledata.write("require_dependency \"environments/donrails_env\"\n")
 envfiledata.write("require_dependency \"antispam\"\n")
+envfiledata.write("$KCODE = 'u'\n")
 envfiledata.close
 
